--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,12 @@ jobs:
         with:
           go-version: '1.23'
           check-latest: true
+      - name: Verify Go installation
+        run: |
+          go version
+          which go
+          echo "GOPATH=$GOPATH"
+          echo "GOROOT=$GOROOT"
       - name: Install dependencies
         run: |
           sudo apt-get update
@@ -34,8 +40,10 @@ jobs:
         uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
-          version: latest
+          version: "~> v2"
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CGO_ENABLED: 1
+          GOPATH: ${{ env.GOPATH }}
+          GOROOT: ${{ env.GOROOT }}
