--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,12 +22,17 @@ jobs:
         with:
           go-version: '1.23'
           check-latest: true
-      - name: Verify Go installation
+      - name: Verify Go installation and set PATH
         run: |
           go version
-          which go
+          echo "Go location: $(which go)"
           echo "GOPATH=$GOPATH"
           echo "GOROOT=$GOROOT"
+          echo "PATH=$PATH"
+          # Add Go to PATH for subsequent steps
+          echo "$(dirname $(which go))" >> $GITHUB_PATH
+          echo "GOROOT=$(go env GOROOT)" >> $GITHUB_ENV
+          echo "GOPATH=$(go env GOPATH)" >> $GITHUB_ENV
       - name: Install dependencies
         run: |
           sudo apt-get update
@@ -36,6 +41,19 @@ jobs:
         run: |
           sudo rm -rf /usr/share/dotnet
           sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+      - name: Pre-validate GoReleaser environment
+        run: |
+          echo "Final PATH check:"
+          echo "PATH=$PATH"
+          echo "Go version: $(go version)"
+          echo "Go env GOROOT: $(go env GOROOT)"
+          echo "Go env GOPATH: $(go env GOPATH)"
+          go mod download
+      - name: Set Go environment for GoReleaser
+        run: |
+          echo "GO_BIN_PATH=$(dirname $(which go))" >> $GITHUB_ENV
+          echo "GO_ROOT_PATH=$(go env GOROOT)" >> $GITHUB_ENV
+          echo "GO_PATH_ENV=$(go env GOPATH)" >> $GITHUB_ENV
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
@@ -45,5 +63,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CGO_ENABLED: 1
-          GOPATH: ${{ env.GOPATH }}
-          GOROOT: ${{ env.GOROOT }}
+          PATH: ${{ env.PATH }}:${{ env.GO_BIN_PATH }}
+          GOROOT: ${{ env.GO_ROOT_PATH }}
+          GOPATH: ${{ env.GO_PATH_ENV }}
